--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    weight: 100%;
+    width: 100%;
     height: 100%;
     background-color: rgb(88, 88, 88);
     background-image: url(../Code/img/abstract-triangles-background.jpg);
