--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgb(88, 88, 88);
-    background-image: url(../Code/img/abstract-triangles-background.jpg);
+    background-image: url(/abstract-triangles-background.jpg);
     position: static;
     background-size: cover;
     background-repeat: no-repeat;
@@ -109,13 +109,13 @@ body::after {
     height: 0;
     overflow: hidden;
     z-index: -1;
-    content: url(../Code/img/photo_6118646672746727338_y.jpg);
+    content: url(/photo_6118646672746727338_y.jpg);
 }
 
 .pics-me {
     width: 100%;
     height: 1000px;
-    background-image: url(../Code/img/photo_6118646672746727338_y.jpg);
+    background-image: url(/photo_6118646672746727338_y.jpg);
     background-size:auto;
     background-repeat: no-repeat;
     background-position: center;
@@ -123,7 +123,7 @@ body::after {
 }
 
 .pics-me:hover {
-    background-image: url(../Code/img/photo_6334600106585737396_y.jpg);
+    background-image: url(./photo_6334600106585737396_y.jpg);
 }
 
 #contact-info {
